# greyhatai

./: README.md
grey_hat_ai/: INSTALLATION_GUIDE.md  QUICK_START.md  README.md  install_kali.py  pyproject.toml
grey_hat_ai/grey_hat_ai/: __init__.py  app.py  autonomous_web_agent.py  llm_manager.py  voice_engine.py
grey_hat_ai/src/cai/: util.py
